--- a/ch06_pt2.ipynb
+++ b/ch06_pt2.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,17 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.layers import SimpleRNN"
    ]
@@ -100,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +102,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_1 (Embedding)      (None, None, 32)          320000    \n",
+      "embedding_2 (Embedding)      (None, None, 32)          320000    \n",
       "_________________________________________________________________\n",
       "simple_rnn_1 (SimpleRNN)     (None, 32)                2080      \n",
       "=================================================================\n",
@@ -135,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +137,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_2 (Embedding)      (None, None, 32)          320000    \n",
+      "embedding_3 (Embedding)      (None, None, 32)          320000    \n",
       "_________________________________________________________________\n",
       "simple_rnn_2 (SimpleRNN)     (None, None, 32)          2080      \n",
       "=================================================================\n",
@@ -167,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +169,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_3 (Embedding)      (None, None, 32)          320000    \n",
+      "embedding_4 (Embedding)      (None, None, 32)          320000    \n",
       "_________________________________________________________________\n",
       "simple_rnn_3 (SimpleRNN)     (None, None, 32)          2080      \n",
       "_________________________________________________________________\n",
@@ -210,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +251,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_4 (Embedding)      (None, None, 32)          320000    \n",
+      "embedding_5 (Embedding)      (None, None, 32)          320000    \n",
       "_________________________________________________________________\n",
       "simple_rnn_7 (SimpleRNN)     (None, 32)                2080      \n",
       "_________________________________________________________________\n",
@@ -271,25 +263,25 @@
       "_________________________________________________________________\n",
       "Train on 20000 samples, validate on 5000 samples\n",
       "Epoch 1/10\n",
-      "20000/20000 [==============================] - 25s 1ms/step - loss: 0.6368 - acc: 0.6180 - val_loss: 0.5701 - val_acc: 0.7004\n",
+      "20000/20000 [==============================] - 20s 1ms/step - loss: 0.6401 - acc: 0.6175 - val_loss: 0.5105 - val_acc: 0.7702\n",
       "Epoch 2/10\n",
-      "20000/20000 [==============================] - 22s 1ms/step - loss: 0.4122 - acc: 0.8206 - val_loss: 0.5092 - val_acc: 0.7782\n",
+      "20000/20000 [==============================] - 20s 982us/step - loss: 0.4176 - acc: 0.8188 - val_loss: 0.3765 - val_acc: 0.8380\n",
       "Epoch 3/10\n",
-      "20000/20000 [==============================] - 20s 996us/step - loss: 0.3204 - acc: 0.8719 - val_loss: 0.4324 - val_acc: 0.8100\n",
+      "20000/20000 [==============================] - 20s 1ms/step - loss: 0.3089 - acc: 0.8744 - val_loss: 0.4002 - val_acc: 0.8268\n",
       "Epoch 4/10\n",
-      "20000/20000 [==============================] - 22s 1ms/step - loss: 0.2553 - acc: 0.9009 - val_loss: 0.4032 - val_acc: 0.8400\n",
+      "20000/20000 [==============================] - 20s 988us/step - loss: 0.2483 - acc: 0.9026 - val_loss: 0.3575 - val_acc: 0.8520\n",
       "Epoch 5/10\n",
-      "20000/20000 [==============================] - 20s 993us/step - loss: 0.2145 - acc: 0.9172 - val_loss: 0.4087 - val_acc: 0.8262\n",
+      "20000/20000 [==============================] - 20s 984us/step - loss: 0.1892 - acc: 0.9312 - val_loss: 0.3712 - val_acc: 0.8504\n",
       "Epoch 6/10\n",
-      "20000/20000 [==============================] - 44s 2ms/step - loss: 0.1540 - acc: 0.9446 - val_loss: 0.4002 - val_acc: 0.8538\n",
+      "20000/20000 [==============================] - 20s 986us/step - loss: 0.1507 - acc: 0.9453 - val_loss: 0.3993 - val_acc: 0.8390\n",
       "Epoch 7/10\n",
-      "20000/20000 [==============================] - 21s 1ms/step - loss: 0.1100 - acc: 0.9607 - val_loss: 0.4571 - val_acc: 0.8416\n",
+      "20000/20000 [==============================] - 20s 996us/step - loss: 0.1061 - acc: 0.9640 - val_loss: 0.4291 - val_acc: 0.8658\n",
       "Epoch 8/10\n",
-      "20000/20000 [==============================] - 20s 1ms/step - loss: 0.0731 - acc: 0.9755 - val_loss: 0.5130 - val_acc: 0.8340\n",
+      "20000/20000 [==============================] - 20s 996us/step - loss: 0.0713 - acc: 0.9770 - val_loss: 0.4901 - val_acc: 0.8344\n",
       "Epoch 9/10\n",
-      "20000/20000 [==============================] - 21s 1ms/step - loss: 0.0462 - acc: 0.9856 - val_loss: 0.5333 - val_acc: 0.8364\n",
+      "20000/20000 [==============================] - 20s 984us/step - loss: 0.0440 - acc: 0.9872 - val_loss: 0.5261 - val_acc: 0.8428\n",
       "Epoch 10/10\n",
-      "20000/20000 [==============================] - 21s 1ms/step - loss: 0.0345 - acc: 0.9905 - val_loss: 0.6341 - val_acc: 0.8188\n"
+      "20000/20000 [==============================] - 20s 1ms/step - loss: 0.0286 - acc: 0.9919 - val_loss: 0.7423 - val_acc: 0.7638\n"
      ]
     }
    ],
@@ -320,6 +312,43 @@
     "\n",
     "<center><img src = \"img/lstm.png\" style = \"width : 80%\"></center>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 20000 samples, validate on 5000 samples\n",
+      "Epoch 1/10\n",
+      " 5376/20000 [=======>......................] - ETA: 1:00 - loss: 0.6605 - acc: 0.6317"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.layers import LSTM\n",
+    "from keras.layers import Embedding\n",
+    "from keras.models import Sequential\n",
+    "\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(max_features, 32))\n",
+    "model.add(LSTM(32))\n",
+    "model.add(Dense(1, activation = 'sigmoid'))\n",
+    "\n",
+    "model.compile(optimizer = 'rmsprop', loss = 'binary_crossentropy', metrics = ['acc'])\n",
+    "history = model.fit(input_train, y_train, epochs = 10, batch_size = 128, validation_split = 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
